Updated gradle. Switch to java 1.9 and added module-info.