@@ -1,12 +1,11 @@
 plugins {
     id 'java'
-    id 'maven'
     id 'maven-publish'
     id 'signing'
 }
 
 apply plugin: 'java'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 repositories {
     mavenCentral()
@@ -28,7 +27,7 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.12.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.12.0'
     implementation 'javax.json:javax.json-api:1.1.4'
-    implementation 'org.apache.commons:commons-csv:1.1'
+    implementation 'org.apache.commons:commons-csv:1.8'
     implementation 'javax.interceptor:javax.interceptor-api:1.2'
     implementation 'org.glassfish:javax.json:1.1.4'
     implementation 'org.netbeans.api:org-netbeans-swing-outline:RELEASE110'
@@ -37,8 +36,20 @@ dependencies {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
+}
+
+compileJava {
+    doFirst {
+        println "Gradle version $project.gradle.gradleVersion"
+
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-exports', 'java.desktop/sun.awt.shell=com.bw.jtools'
+        ]
+        classpath = files()
+    }
 }
 
 task intTest(type: Test) {
@@ -52,22 +63,26 @@ task intTest(type: Test) {
 
 check.dependsOn intTest
 
+processResources {
+    duplicatesStrategy = 'exclude'
+}
+
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from javadoc.destinationDir
 }
 
 jar {
     manifest {
         attributes 'Implementation-Title': 'JTools',  
-        	   'Implementation-Version': version,
+        	   'Implementation-Version': project.version,
                    'Build-Timestamp': new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
                    'Build-Jdk'      : "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})"
     }
 
-    baseName = 'jtools';
+    archiveBaseName = 'jtools';
     includeEmptyDirs = false;
-    from "${rootProject.projectDir}/licenses" 
+    from "${rootProject.projectDir}/licenses"
 
 }
 
@@ -118,4 +133,16 @@ publishing {
     
 signing {
     sign publishing.publications.jtools
+}
+
+task runJPathChooser(type: Exec) {
+    dependsOn build
+    dependsOn ":jtools:jar"
+    group = "Examples"
+    description = "Runs JPathChooser"
+
+    commandLine "java",
+            "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=127.0.0.1:8000",
+            "-classpath", "${buildPath}/../../jtools/build/libs/jtools-${project.version}.jar",
+            "com.bw.jtools.ui.pathchooser.JPathChooser"
 }
